<?xml version="1.0"?>
<package format="2">
  <name>gazebo_terrain_tutorial</name>
  <version>0.0.0</version>
  <description>The gazebo_terrain_tutorial package</description>

  <maintainer email="kevin@kevindemarco.com">ros</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>husky-description</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
